// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit.fetchApiMock anonymous@test/login/1 1`] = `
Object {
  "message": "test login success",
  "status": "success",
  "user": Object {
    "birthyear": 1985,
    "firstName": "Павел",
    "foreman_id": null,
    "id": 1,
    "lastName": "Сысоев",
    "location": Array [
      47.042697,
      73.97209,
    ],
    "passport": 9991,
    "patronymic": "Якушев",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 2,
    "vk_id": 3809,
    "witness_id": null,
  },
}
`;

exports[`unit.fetchApiMock user1@users/get?ids= 1`] = `
Array [
  Object {
    "birthyear": 1985,
    "firstName": "Павел",
    "foreman_id": null,
    "id": 1,
    "lastName": "Сысоев",
    "location": Array [
      47.042697,
      73.97209,
    ],
    "passport": 9991,
    "patronymic": "Якушев",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 2,
    "witness_id": null,
  },
]
`;

exports[`unit.fetchApiMock user1@users/get?ids=1,2,3 1`] = `
Array [
  Object {
    "birthyear": 1985,
    "firstName": "Павел",
    "foreman_id": null,
    "id": 1,
    "lastName": "Сысоев",
    "location": Array [
      47.042697,
      73.97209,
    ],
    "passport": 9991,
    "patronymic": "Якушев",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 2,
    "witness_id": null,
  },
  Object {
    "birthyear": 1993,
    "firstName": "Максим",
    "foreman_id": null,
    "id": 2,
    "lastName": "Калашниковa",
    "location": Array [
      0,
      0,
    ],
    "passport": null,
    "patronymic": "Колесников",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 0,
    "witness_id": null,
  },
  Object {
    "birthyear": 1966,
    "firstName": "Валериан",
    "foreman_id": null,
    "id": 3,
    "lastName": "Некрасов",
    "location": Array [
      0,
      0,
    ],
    "passport": null,
    "patronymic": "Дементьев",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 0,
    "witness_id": null,
  },
]
`;

exports[`unit.fetchApiMock user1@users/get?ids=2 1`] = `
Array [
  Object {
    "birthyear": 1993,
    "firstName": "Максим",
    "foreman_id": null,
    "id": 2,
    "lastName": "Калашниковa",
    "location": Array [
      0,
      0,
    ],
    "passport": null,
    "patronymic": "Колесников",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 0,
    "witness_id": null,
  },
]
`;

exports[`unit.fetchApiMock users/get?ids= 1`] = `
Array [
  Object {
    "birthyear": 1231,
    "firstName": "Алексей",
    "foreman_id": null,
    "id": 2,
    "lastName": "Баранов",
    "location": Array [
      55.755826,
      37.6173,
    ],
    "passport": 1231,
    "patronymic": "qwer",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 2,
    "witness_id": null,
  },
]
`;

exports[`unit.fetchApiMock users/get?ids=1,2,3 1`] = `
Array [
  Object {
    "birthyear": 1234,
    "firstName": "Арт",
    "foreman_id": null,
    "id": 1,
    "lastName": "Арт",
    "location": Array [
      55.030494139179,
      82.918603420258,
    ],
    "passport": null,
    "patronymic": "Арт",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 2,
    "witness_id": 2,
  },
  Object {
    "birthyear": 1231,
    "firstName": "Алексей",
    "foreman_id": null,
    "id": 2,
    "lastName": "Баранов",
    "location": Array [
      55.755826,
      37.6173,
    ],
    "passport": 1231,
    "patronymic": "qwer",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 2,
    "witness_id": null,
  },
  Object {
    "birthyear": 1982,
    "firstName": "Александр",
    "foreman_id": null,
    "id": 3,
    "lastName": "Титов",
    "location": Array [
      55.158396343962,
      49.176560640553,
    ],
    "passport": null,
    "patronymic": "Николаевич",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 2,
    "witness_id": 2,
  },
]
`;

exports[`unit.fetchApiMock users/get?ids=2 1`] = `
Array [
  Object {
    "birthyear": 1231,
    "firstName": "Алексей",
    "foreman_id": null,
    "id": 2,
    "lastName": "Баранов",
    "location": Array [
      55.755826,
      37.6173,
    ],
    "passport": 1231,
    "patronymic": "qwer",
    "photo": "@todo",
    "smallPhoto": "@todo",
    "status": 2,
    "witness_id": null,
  },
]
`;
